--- a/app/src/main/res/layout/tab1_fragment.xml
+++ b/app/src/main/res/layout/tab1_fragment.xml
@@ -127,17 +127,6 @@
         android:id="@+id/textView8" />
 
     <TextView
-        android:text="00"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView8"
-        android:layout_toRightOf="@+id/textView8"
-        android:layout_toEndOf="@+id/textView8"
-        android:id="@+id/twitter2"
-        android:textColor="#000000"
-        tools:text="00" />
-
-    <TextView
         android:text=":"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -352,5 +341,17 @@
         android:layout_below="@+id/vkontakte1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp" />
+
+    <TextView
+        android:text="00"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/twitter2"
+        android:textColor="#000000"
+        tools:text="00"
+        android:layout_alignBaseline="@+id/textView8"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_toLeftOf="@+id/vkontakte3"
+        android:layout_toStartOf="@+id/vkontakte3" />
 
 </RelativeLayout>
