--- a/app/src/main/res/layout/tab2_fragment.xml
+++ b/app/src/main/res/layout/tab2_fragment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/rel1"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -55,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView13"
-        android:textColor="#FF00F00F"
+        android:textColor="#000000"
         android:layout_alignBaseline="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignLeft="@+id/textView15"
@@ -69,17 +70,6 @@
         android:layout_marginTop="49dp"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/imageView5"
-        android:layout_toEndOf="@+id/imageView5" />
-
-    <TextView
-        android:text="Состояние"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/textView5"
-        android:textColor="#000000"
-        android:layout_above="@+id/textView"
         android:layout_toRightOf="@+id/imageView5"
         android:layout_toEndOf="@+id/imageView5" />
 
@@ -124,4 +114,15 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/textView15"
         android:layout_alignEnd="@+id/textView15" />
+
+    <TextView
+        android:text="Состояние"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/textView5"
+        android:textColor="#000000"
+        android:layout_above="@+id/textView"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView" />
 </RelativeLayout>
